--- a/miniprogram/pages/uploadRecipe/uploadRecipe.wxml
+++ b/miniprogram/pages/uploadRecipe/uploadRecipe.wxml
@@ -1,2 +1,57 @@
-<!--miniprogram/pages/uploadRecipe/uploadRecipe.wxml-->
-<text>miniprogram/pages/uploadRecipe/uploadRecipe.wxml</text>
+<view wx:if="{{cover==''}}" class='addCover' bindtap="uploadCover">
+  <text>+菜谱封面\n诱人的封面是吸引人们的关键</text>
+</view>
+<view wx:elif="{{cover!=''}}" bindtap="uploadCover">
+  <image src="{{cover}}"></image>
+</view>
+<view class="wholeStyle">
+  <view class='addTitle'>
+    <input placeholder="输入这道美食的名字" placeholder-style="text-align: center" style="text-align: center"></input>
+  </view>
+  <view class="container">
+      <!-- 分割线 -->
+    <view class="divLine"></view>
+  </view>
+  <view>
+    <textarea class="addStory" placeholder="输入这道美食背后的故事"></textarea>
+  </view>
+  <view class="weui_cells__title">用料</view>
+  <view class="weui-cell__input">
+    <view wx:for="{{ingredients}}" class="weui-cell">
+      <icon wx:if="{{temp1 == 0}}" type="clear" data-index="{{index}}" bindtap="deleteIngredient"></icon>
+      <input placeholder="食材" value="{{item.food}}" data-tag="food" data-index="{{index}}" bindblur="setIngredientsValue" style="margin-left:10px"></input>
+      <input placeholder="用量" value="{{item.count}}" data-tag="count" data-index="{{index}}" bindblur="setIngredientsValue"></input>
+    </view>
+  </view>
+  <view style="display:flex; flex-direction: row; justify-content: space-between">
+    <view><text bindtap="addIngredient">添加用料</text></view>
+    <view>
+      <text wx:if="{{temp1 == 1}}" bindtap="changeTemp1">修改</text>
+      <text wx:elif="{{temp1 == 0}}" bindtap="changeTemp1">完成</text>
+    </view>
+  </view>
+
+  <view> <text>做法</text> </view>
+  <view wx:for="{{steps}}">
+    <icon wx:if="{{temp2 == 0}}" type="clear" data-index="{{index}}" bindtap="deleteStep"></icon>
+    <view wx:if="{{item.picture==''}}" data-index="{{index}}" data-tag="picture" class='addCover' bindtap="uploadPicture">
+      <text>+步骤图\n上传至少两张步骤图</text>
+    </view>
+    <view wx:elif="{{item.picture!=''}}" data-index="{{index}}" data-tag="picture" class='addCover' bindtap="uploadPicture">
+      <image src="{{item.picture}}"></image>
+    </view>
+    <input placeholder="添加说明步骤，至少两步" data-tag="step" value="{{item.step}}" bindblur="setStepsValue"></input>
+  </view>
+  <view style="display:flex; flex-direction: row; justify-content: space-between">
+    <view><text bindtap="addStep">添加用料</text></view>
+    <view>
+      <text wx:if="{{temp2 == 1}}" bindtap="changeTemp2">修改</text>
+      <text wx:elif="{{temp2 == 0}}" bindtap="changeTemp2">完成</text>
+    </view>
+  </view>
+  <view> <text>小贴士</text> </view>
+  <view>
+    <textarea class="addStory" placeholder="这道菜还有哪些需要注意的细节和小技巧"></textarea>
+  </view>
+  <button>发布这个菜谱</button>
+</view>
