--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,4 +1,7 @@
 /**app.wxss**/
+@import '/style/weui.wxss';
+@import '/style/icon/weui-icon.wxss';
+
 .container {
   display: flex;
   flex-direction: column;
