--- a/miniprogram/pages/recipeInfo/recipeInfo.wxml
+++ b/miniprogram/pages/recipeInfo/recipeInfo.wxml
@@ -1,53 +1,81 @@
 <!--pages/recipeInfo/recipeInfo.wxml-->
 <view class="wholeStyle">
-  <view class="backGround">
-    <image class="backGroundImage" src="../../image/indexImage1.jpg"></image>
+	<view class="backGround">
+		<image class="backGroundImage" src="../../image/indexImage1.jpg"></image>
+	</view>
+  <view class="ReadAndStar">
+    <text>阅读量: {{reading}}</text>
+    <text>评分: {{score}}</text>
   </view>
-  <view class="author">
-    <view class="authorHead">
-      <image class="authorHeadImage" src="../../image/head.jpg"></image>
-    </view>
-    <view>
-      <view class="authorName" hover-class="authorName_hover" hover-stay-time="50"><text>Lintiang!</text></view>
-      <view class="authorFollow">关 注</view>
-    </view>   
-  </view>
-  <view class="materialList">
-    <text style="margin-bottom: 40rpx">————原料表————</text>
-    <view wx:for="{{materialListCount}}">
-      <view class="materialItem">
-        <view class="materialItemFood"><text>鸡肉</text></view>
-        <view class="materialItemNum"><text>100g</text></view>
-        <image src="../../image/next.png" class="materialItemImage"></image>
-      </view>
-    </view>
-  </view>
-  <view class="StepList">
-    <text style="margin-bottom: 40rpx">————制作步骤————</text>
-    <view wx:for="{{StepListIndex}}" wx:for-item="item">
-      <view class="StepTitle"><text>步骤{{item.index}}</text></view>
-      <image src="{{item.picture}}" class="StepImage"></image>
-      <view class="StepInfo"><text>{{item.info}}</text></view>
-    </view>
-  </view>
-  <view class="CommentList">
-    <text style="margin-bottom: 40rpx">————评论————</text>
-    <view wx:for="{{CommentListIndex}}" wx:for-item="item" wx:if="{{item.index <= MaxShowComment}}">
-      <view class="CommentItem">
-        <view class="CommentUserInfoAndAgreeCount">
-          <view class="CommentUserHeadImage"><image class="CommentUserHeadImageImage" src="{{item.headImage}}"></image></view>
-          <view class="CommentUserNameAndTime">
-            <view class="CommentUserName"><text>{{item.id}}</text></view>
-            <view class="CommentUserTime"><text>{{item.time}}</text></view>
-          </view>
-          <view class="CommentAgreeCount">
-            <view class="CommentAgreeCountImage"><image class="CommentAgreeCountIcon" src="../../image/agree.png"></image></view>
-            <view class="CommentAgreeCountText"><text>{{item.agreeCount}}</text></view>
-          </view>
+	<view class="author">
+		<view class="authorHead">
+			<image class="authorHeadImage" src="../../image/head.jpg"></image>
+		</view>
+		<view>
+			<view class="authorName" hover-class="authorName_hover" hover-stay-time="50"><text>Lintiang!</text></view>
+      <view class="authorFollowingCount"><text>关注: {{followingCount}}</text></view>
+		</view>
+    <!-- 这里还没有实现切换 -->
+    <view wx:if="{{isFollowing}}" class="authorFollow" hover-class="authorFollow-hover" hover-stay-time="50">关注</view>
+    <view wx:else class="authorFollowOK" hover-class="authorFollowOK-hover" hover-stay-time="50">已关注</view>
+	</view>
+	<view class="materialList">
+		<text style="margin-bottom: 40rpx">————原料表————</text>
+		<view wx:for="{{materialListCount}}">
+    <!-- 这里每一项要能够连接出去 -->
+			<view class="materialItem">
+				<view class="materialItemFood"><text>鸡肉</text></view>
+				<view class="materialItemNum"><text>100g</text></view>
+				<image src="../../image/next.png" class="materialItemImage"></image>
+			</view>
+		</view>
+	</view>
+	<view class="StepList">
+		<text style="margin-bottom: 40rpx">————制作步骤————</text>
+		<view wx:for="{{StepListIndex}}" wx:for-item="item">
+			<view class="StepTitle"><text>步骤{{item.index}}</text></view>
+			<image src="{{item.picture}}" class="StepImage"></image>
+			<view class="StepInfo"><text>{{item.info}}</text></view>
+		</view>
+	</view>
+	<view class="CommentList">
+		<text style="margin-bottom: 40rpx">————评论————</text>
+		<view wx:for="{{CommentListIndex}}" wx:for-item="item" wx:if="{{item.index <= MaxShowComment}}">
+			<view class="CommentItem">
+				<view class="CommentUserInfoAndAgreeCount">
+					<view class="CommentUserHeadImage">
+						<image class="CommentUserHeadImageImage" src="{{item.headImage}}"></image>
+					</view>
+					<view class="CommentUserNameAndTime">
+						<view class="CommentUserName"><text>{{item.id}}</text></view>
+						<view class="CommentUserTime"><text>{{item.time}}</text></view>
+					</view>
+					<view class="CommentAgreeCount">
+						<view class="CommentAgreeCountImage">
+							<image class="CommentAgreeCountIcon" src="../../image/agree.png"></image>
+						</view>
+						<view class="CommentAgreeCountText"><text>{{item.agreeCount}}</text></view>
+					</view>
+				</view>
+				<view class="CommentContext"><text>{{item.context}}</text></view>
+			</view>
+		</view>
+    <!-- addMaxShowComment 这里想要做的是每次点击More就多显示2个 -->
+		<button bindtap="addMaxShowComment" class="addMaxShowCommentButton">More</button>
+		<view class="comment-fixed">
+			<view class="cf-box-and-stars">
+        <view class="FiveStars">
+          <image style="height:55rpx; width: 55rpx" src="../../image/star_select.svg"></image>
+          <image style="height:55rpx; width: 55rpx" src="../../image/star_select.svg"></image>
+          <image style="height:55rpx; width: 55rpx" src="../../image/star_select.svg"></image>
+          <image style="height:55rpx; width: 55rpx" src="../../image/star_select.svg"></image>
+          <image style="height:55rpx; width: 55rpx" src="../../image/star.svg"></image>
         </view>
-        <view class="CommentContext"><text>{{item.context}}</text></view>
+        <view class="cf-box">
+          <textarea class="cf-content" bindfocus="textAreaFocus" maxlength="200" bindblur="textAreaBlur" auto-height value="{{content}}" placeholder="我要评论" />
+          <text class="cf-send touch-active" bindtap="send">发送</text>
+        </view>
       </view>
     </view>
-    <button bindtap="addMaxShowComment">More</button> <!-- 这里没写成功 -->
   </view>
 </view>
