update(unfinished) RegisterForm UI 20200507

--- a/miniprogram/pages/RegisterForm/RegisterForm.wxss
+++ b/miniprogram/pages/RegisterForm/RegisterForm.wxss
@@ -13,10 +13,21 @@
   border-bottom: solid rgb(232, 231, 231) 1rpx;
   border-top: solid rgb(232, 231, 231) 1rpx;
   display: flex;
+  font-size: small;
+  flex-direction: row;
+}
+
+.weui-cell__Item2{
+  height: 380rpx;
+  border-bottom: solid rgb(232, 231, 231) 1rpx;
+  border-top: solid rgb(232, 231, 231) 1rpx;
+  display: flex;
+  font-size: small;
   flex-direction: row;
 }
 
 .weui-input {
+  width: 65%;
   margin-top: 13rpx;
   margin-left: 30rpx;
   overflow: hidden;
@@ -27,7 +38,15 @@
 }
 
 .weui-label {
-  margin-top: 13rpx;
+  width: 28%;
+  margin-top: 18rpx;
+  margin-left: 30rpx;
+  color: black;
+}
+
+.weui-label2 {
+  width: 28%;
+  margin-top: 140rpx;
   margin-left: 30rpx;
   color: black;
 }
@@ -40,8 +59,130 @@
   margin-right: 12rpx;
 }
 
-.weui-btn {
-  background: #f4de3b !important;
-  color: #000 !important;
+.weui-btn_yes {
+  background: #e5e74a !important;
+  margin-top: 20rpx;
+  margin-bottom: 10rpx;
 }
 
+.weui-btn_reset {
+  background: #c75858;
+  color: white;
+  margin-top: 10rpx;
+  margin-bottom: 20rpx;
+}
+
+.weui-agree__text{
+  display: flex;
+  flex-direction: row;
+  font-size: small;
+}
+
+.weui-agree__checkbox{
+  transform: scale(0.6,0.6);
+}
+
+.weui-agree__checkbox-text{
+  margin-top: 10rpx;
+}
+
+.weui-agree__link{
+  margin-top: 10rpx;
+  color: rgb(176, 212, 212);
+  border-bottom: solid rgb(176, 212, 212) 1rpx;
+}
+
+.weui-agree__link_hover{
+  color: rgb(41, 236, 236);
+}
+
+/* .drawer_screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+}
+ 
+.drawer_box {
+  width: 650rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 1001;
+  background: #FAFAFA;
+  margin: -150px 50rpx 0 50rpx;
+  border-radius: 3px;
+}
+ 
+.drawer_title{
+  padding:15px;
+  font: 20px "microsoft yahei";
+  text-align: center;
+}
+.drawer_content {
+  height: 210px;
+  overflow-y: scroll; 
+}
+ 
+.btn_ok{
+  padding: 10px;
+  font: 20px "microsoft yahei";
+  text-align: center;
+  border-top: 1px solid #E8E8EA;
+  color: #3CC51F;
+}
+ 
+.top{
+	padding-top:8px;
+}
+.bottom {
+	padding-bottom:8px;
+}
+.title {
+	height: 30px;
+	line-height: 30px;
+	width: 160rpx;
+	text-align: center;
+	display: inline-block;
+	font: 300 28rpx/30px "microsoft yahei";
+}
+ 
+.input_base {
+	border: 2rpx solid #ccc;
+	padding-left: 10rpx;
+	margin-right: 50rpx;
+}
+.input_h30{
+	height: 30px;
+	line-height: 30px;
+}
+.input_h60{
+	height: 60px;
+}
+.input_view{
+	font: 12px "microsoft yahei";
+	background: #fff;
+	color:#000;
+	line-height: 30px;
+}
+ 
+input {
+	font: 12px "microsoft yahei";
+	background: #fff;
+	color:#000 ;
+}
+radio{
+	margin-right: 20px;
+}
+
+.grid { display: -webkit-box; display: box; }
+.col-0 {-webkit-box-flex:0;box-flex:0;}
+.col-1 {-webkit-box-flex:1;box-flex:1;}
+.fl { float: left;}
+.fr { float: right;} */
