--- a/miniprogram/pages/RegisterForm/RegisterForm.wxml
+++ b/miniprogram/pages/RegisterForm/RegisterForm.wxml
@@ -1,116 +1,49 @@
 <!--pages/RegisterForm/RegisterForm.wxml-->
+<!-- 还没做完20200507 -->
 <view class="wholeStyle">
 	<form bindsubmit="formSubmit">
-		<view class="weui-cells__title">请填写基本信息</view>
+		<!-- <view class="weui-cells__title">请填写基本信息</view> -->
 		<view class="weui-cells weui-cells_after-title">
 			<view class="weui-cell weui-cell_input">
 				<view class="weui-cell__Item">
 					<view class="weui-label">店名</view>
 					<input class="weui-input" type="text" name="name" value="{{name}}" placeholder="请输入店名" />
 				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">性别</view>
+				<view class="weui-cell__Item">
+					<view class="weui-label">法人姓名</view>
+					<input class="weui-input" type="text" name="lawName" value="{{lawName}}" placeholder="请输入法人姓名" />
 				</view>
-				<view class="weui-cell__bd">
-					<radio-group class="radio-group weui-cell weui-check__label" name="type" bindchange="setSex">
-						<label class="radio" wx:for="{{types}}" wx:key="value">
-							<radio value="{{item.name}}" checked="{{item.checked}}" />
-							<text>{{item.value}}</text>
-						</label>
-					</radio-group>
+				<view class="weui-cell__Item">
+					<view class="weui-label">法人身份证号</view>
+					<input class="weui-input" type="text" name="userId" value="{{userId}}" placeholder="请输入18位身份证号" />
 				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">手机号</view>
+				<view class="weui-cell__Item">
+					<view class="weui-label">餐厅类型</view>
+					<input class="weui-input" type="text" name="type" value="{{type}}" placeholder="川菜馆、粤菜馆、烧烤店等" />
 				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="phone" maxlength="11" value="{{phone}}" type="number" placeholder="请输入手机号" />
+				<view class="weui-cell__Item">
+					<view class="weui-label">许可证编号</view>
+					<input class="weui-input" type="text" name="foodId" value="{{foodId}}" placeholder="请输入食品经营许可证编号" />
 				</view>
-			</view>
-		</view>
-		<view class="weui-cells__title">填写其他信息</view>
-		<view class="weui-cells weui-cells_after-title">
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">出生日期</view>
+				<view class="weui-cell__Item">
+					<view class="weui-label">餐厅地址</view>
+					<input class="weui-input" type="text" name="location" value="{{location}}" placeholder="请输入餐厅地址" />
 				</view>
-				<view class="weui-cell__bd">
-					<picker mode="date" name="date" value="{{birthday}}" bindchange="bindDateChange">
-						<view class="weui-input">{{birthday}}</view>
-					</picker>
+				<view class="weui-cell__Item">
+					<view class="weui-label">法人固定电话</view>
+					<input class="weui-input" type="text" name="fixedPhone" value="{{fixedPhone}}" placeholder="请输入固定电话" />
 				</view>
-				<view class="weui-cell__ft weui-cell__ft_in-access"></view>
-			</view>
-			<view class="weui-cell weui-cell_input weui-cell_vcode">
-				<view class="weui-cell__hd">
-					<view class="weui-label">会员等级</view>
+				<view class="weui-cell__Item">
+					<view class="weui-label">法人移动电话</view>
+					<input class="weui-input" type="text" name="mobPhone" value="{{mobPhone}}" placeholder="请输入11位手机号" />
 				</view>
-				<view class="weui-cell__bd">
-					<radio-group bindchange="setMemberGrade">
-						<picker mode="selector" value="{{gender}}" name="gender" range="{{member_grade}}" bindchange="setMemberGrade">
-							<view class="weui-input">{{member_grade[gender]}}</view>
-						</picker>
-					</radio-group>
+				<view class="weui-cell__Item">
+					<view class="weui-label">验证码</view>
+					<input class="weui-input" type="text" name="confirmId" value="{{confirmId}}" placeholder="请输入6位验证码" />
 				</view>
-				<view class="weui-cell__ft weui-cell__ft_in-access"></view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">首充金额</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="money" placeholder="请填写首充金额" />
-				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">首充积分</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="integral" placeholder="请填写首充积分" />
-				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">证件号码</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="certificate" placeholder="请填写证件号码" />
-				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">固定电话</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="tel" placeholder="请填写固定电话" />
-				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">联系地址</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="address" placeholder="请填写联系地址" />
-				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">Email</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="email" placeholder="请填写Email" />
-				</view>
-			</view>
-			<view class="weui-cell weui-cell_input">
-				<view class="weui-cell__hd">
-					<view class="weui-label">推荐人</view>
-				</view>
-				<view class="weui-cell__bd">
-					<input class="weui-input" name="re_member" placeholder="请填写推荐人" />
+				<view class="weui-cell__Item2">
+					<view class="weui-label2">餐厅介绍</view>
+					<textarea class="weui-input" type="text" maxlength="200" name="introduction" value="{{introduction}}" placeholder="请输入餐厅介绍（不超过200字）" />
 				</view>
 			</view>
 		</view>
@@ -121,14 +54,43 @@
 					<view class="weui-agree__checkbox-icon">
 						<icon class="weui-agree__checkbox-icon-check" type="success_no_circle" size="9" wx:if="{{isAgree}}"></icon>
 					</view>
-					阅读并同意
-					<navigator url="/pages/notice/index?id=1" class="weui-agree__link">《免责声明》</navigator>
+					<text class="weui-agree__checkbox-text">阅读并同意</text>
+					<view bindtap="gotoNotice" class="weui-agree__link" hover-class="weui-agree__link_hover">《免责声明》</view> 
 				</view>
 			</label>
 		</checkbox-group>
 		<view class="weui-btn-area">
-			<button class="weui-btn" style='margin:5px;' type="primary" formType="submit">确定</button>
-			<button formType="reset" style='margin:5px;'>重置</button>
+			<button class="weui-btn_yes" type="primary" formType="submit" bindtap="powerDrawer">确定</button>
+			<button class="weui-btn_reset" formType="reset">重置</button>
 		</view>
 	</form>
+</view>
+
+<view class="drawer_screen" bindtap="powerDrawer" wx:if="{{showModalStatus}}"></view>
+<view animation="{{animationData}}" class="drawer_box" wx:if="{{showModalStatus}}">
+  <!--drawer content-->
+  <view class="drawer_title">弹窗标题</view>
+  <view class="drawer_content">
+    <view class="top grid">
+      <label class="title col-0">店名</label>
+      <view class="input_base input_h30 col-1">{{name}}</view>
+    </view>
+    <view class="top grid">
+      <label class="title col-0">法人姓名</label>
+      <view class="input_base input_h30 col-1">{{lawName}}</view>
+    </view>
+    <view class="top grid">
+      <label class="title col-0">法人身份证号</label>
+      <view class="input_base input_h30 col-1">{{userId}}</view>
+    </view>
+    <view class="top grid">
+      <label class="title col-0">许可证编号</label>
+      <view class="input_base input_h30 col-1">{{foodId}}</view>
+    </view>
+    <view class="top bottom grid">
+      <label class="title col-0">法人手机号</label>
+      <view class="input_base input_h30 col-1">{{mobPhone}}</view>
+    </view>
+  </view>
+  <view class="btn_ok" bindtap="powerDrawer" data-statu="close">确定</view>
 </view>
