--- a/miniprogram/pages/Favorites/Favorites.wxss
+++ b/miniprogram/pages/Favorites/Favorites.wxss
@@ -49,6 +49,20 @@
   -webkit-line-clamp:1;
 }
 
+.favoritesItemName {
+  width: 100%;
+  height: 45rpx;
+  text-align: left;
+  margin-top: 15rpx;  
+  font-size: 35rpx;
+  display: -webkit-box ;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp:1;
+}
+
 .favoritesItemAuthorIcon{
   margin-top:15rpx;
   margin-bottom:15rpx;
@@ -60,7 +74,6 @@
   width: 100%;
   height: 40rpx;
   text-align: left;
-  margin-left: 55rpx;
   font-size: 30rpx;
   color: gray;
 }
