--- a/miniprogram/pages/MyRecipe/MyRecipe.wxml
+++ b/miniprogram/pages/MyRecipe/MyRecipe.wxml
@@ -4,6 +4,7 @@
     <view wx:for="{{favoritesItemList}}" wx:for-item="item">
       <view class="favoritesItem">
         <image src="{{item.headImageUrl}}" class="favoritesItemImage" mode="aspectFill"></image>
+        <text class="favoritesItemName">{{item.name}}</text>
         <text class="favoritesItemTime">发布于: {{item.favoritesTime}}</text>
       </view>
     </view>
