--- a/miniprogram/pages/MyRecipe/MyRecipe.wxss
+++ b/miniprogram/pages/MyRecipe/MyRecipe.wxss
@@ -60,8 +60,17 @@
 .favoritesItemTime{
   width: 100%;
   height: 40rpx;
-  text-align: center;
-  margin:30rpx auto;
+  text-align: left;
+  margin:5rpx auto;
   font-size: 30rpx;
   color: gray;
+}
+
+.favoritesItemName{
+  width: 100%;
+  height: 40rpx;
+  text-align: left;
+  margin:20rpx auto;
+  font-size: 35rpx;
+  color: rgb(0, 0, 0);
 }
