--- a/miniprogram/pages/restaurant/restaurant.wxml
+++ b/miniprogram/pages/restaurant/restaurant.wxml
@@ -1,2 +1,16 @@
 <!--pages/restaurant/restaurant.wxml-->
-<text>pages/restaurant/restaurant.wxml</text>
+<view class="wholeStyle">
+  <view class="favoritesList">
+    <view wx:for="{{favoritesItemList}}" wx:for-item="item">
+      <view class="favoritesItem">
+        <image src="{{item.headImageUrl}}" class="favoritesItemImage" mode="aspectFill"></image>
+        <text class="favoritesItemName">{{item.name}}</text>
+        <view class="favoritesItemAuthor">
+          <image src="../../image/position.png" class="favoritesItemAuthorIcon"></image>
+          <text class="favoritesItemAuthorText">{{item.location}}</text>
+        </view>
+        <text class="favoritesItemTime">评分: {{item.favoritesScore}}</text>
+      </view>
+    </view>
+  </view>
+</view>
