--- a/miniprogram/pages/userInfo/userInfo.wxss
+++ b/miniprogram/pages/userInfo/userInfo.wxss
@@ -1,7 +1,39 @@
-/* pages/restaurant/restaurant.wxss */
+/* pages/mine/mine.wxss */
+.title {
+  font-size: 60rpx;
+  display: flex; /* 设置显示样式 */
+  justify-content: center; /* 内容居中 */
+}
+
+.subtitle {
+  font-size: 40rpx;
+  display: flex; /* 设置显示样式 */
+  justify-content: center; /* 内容居中 */
+}
+
+.layout {
+  display: flex;  
+  flex-direction: row;
+}
+
+.avatar {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+}
+
+.divLine {
+  background: #E0E3DA;
+  width: 100%;
+  height: 3rpx;
+  margin-top: 13px;
+}
+
 .wholeStyle{
   margin-left: 5%;
-  margin-right: 5%;
+  margin-right: 5%;  
 }
 
 .favoritesList{
@@ -49,6 +81,20 @@
   -webkit-line-clamp:1;
 }
 
+.favoritesItemName {
+  width: 100%;
+  height: 45rpx;
+  text-align: left;
+  margin-top: 15rpx;  
+  font-size: 35rpx;
+  display: -webkit-box ;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp:1;
+}
+
 .favoritesItemAuthorIcon{
   margin-top:15rpx;
   margin-bottom:15rpx;
@@ -62,13 +108,4 @@
   text-align: left;
   font-size: 30rpx;
   color: gray;
-}
-
-.favoritesItemName{
-  width: 100%;
-  height: 40rpx;
-  text-align: left;
-  margin-top :10rpx;
-  font-size: 35rpx;
-  color: rgb(0, 0, 0);
 }
