--- a/miniprogram/pages/uploadRecipe/uploadRecipe.wxss
+++ b/miniprogram/pages/uploadRecipe/uploadRecipe.wxss
@@ -36,3 +36,77 @@
   width: 90%; 
   margin-top: 12px;
 }
+
+.select_box{
+  background: #fff;
+  width: 80%;
+  margin: 30rpx auto;
+  position: relative;
+  z-index: 1;
+}
+
+.select{
+  box-sizing: border-box;
+  width: 100%;
+  /* height: 70rpx; */
+  border:1px solid #efefef;
+  border-radius: 8rpx;
+  display: flex;
+  align-items: center;
+  padding: 0 20rpx;
+  z-index: 1;
+}
+
+.select_text{
+  font-size: 30rpx;
+  flex: 1;
+}
+
+.select_img{
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  transition:transform 0.3s;
+}
+.select_img_rotate{
+  transform:rotate(180deg); 
+}
+
+.option_box{
+  position: absolute;
+  top: 70rpx;
+  width: 100%;
+  border:1px solid #efefef;
+  box-sizing: border-box;
+  height: 0;
+  overflow-y: auto;
+  border-top: 0;
+  background: #fff;
+  transition: height 0.3s;
+}
+.option{
+  display: block;
+  line-height: 40rpx;
+  font-size: 30rpx;
+  border-bottom: 1px solid #efefef;
+  padding: 10rpx;
+}
+
+ .section{font-size:28rpx}
+ .on{display: block}
+ .off{display: none}
+
+.section text {
+  font-size: small;
+  color: darkgray;
+}
+
+.myButton{
+  border: 1px solid grey;
+  font-size: 12px;
+  margin: 4px;
+}
+
+.myButton::after{
+  border: none; 
+}
